--- a/public/02-colaboration.html
+++ b/public/02-colaboration.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body data-bg="01.png">
+	<body data-bg="02.png">
 		<div class="main-wrapper">
 			<div class="menu-mobile menu-mobile--js d-xl-none">
 				<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
@@ -180,205 +180,81 @@
 				</div>
 			</header>
 			<!-- end header-->
-			<!-- start sAbout-->
-			<section class="sAbout section" id="sAbout">
-				<div class="sAbout__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
-				</div>
+			<div class="page-head">
 				<div class="container">
 					<nav>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="/"><span>Главная</span></a></li>
-							<li class="breadcrumb-item active"><a href="#"><span>О магазине</span></a></li>
+							<li class="breadcrumb-item active"><a href="#"><span>Сотрудничество</span></a></li>
 						</ol>
 					</nav>
-					<div class="sAbout__row row">
-						<div class="col-md-4 col-lg-5">
-							<div class="section-title">
-								<h1>О магазине</h1>
-							</div>
-						</div>
-						<div class="col-md-8 col-lg-7">
-							<div class="sAbout__descr">
-								<p>Наша история началась в 2009 году. С тех пор мы постоянно развиваемся и сейчас рады представить вам новейший формат салона бытовой техники, где объединились все лучшие элементы классического офф-лайн шоу-рума и современного интернет-магазина. Наша история началась в 2009 году.</p>
-							</div><a class="sAbout__message-btn" href="#">написать нам</a>
-						</div>
-					</div>
-					<div class="sAbout__img"><img loading="lazy" src="img/@2x/sAbout-baner.png" alt=""/>
-					</div>
-					<div class="sAbout__pills-row row">
-						<div class="col-sm-6 col-lg-3">
-							<div class="sAbout__pill" style="background-color: #DFD1CC; color: #3F3F3F">
-								<div class="sAbout__num">2009
-								</div>
-								<div class="sAbout__p-txt">год основания компании
-								</div>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-3">
-							<div class="sAbout__pill" style="background-color: #717171; color: #ffffff">
-								<div class="sAbout__num">1 200
-								</div>
-								<div class="sAbout__p-txt">наименований продукции
-								</div>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-3">
-							<div class="sAbout__pill" style="background-color: #EEEEEE; color: #3F3F3F">
-								<div class="sAbout__num">34
-								</div>
-								<div class="sAbout__p-txt">крупных бренда
-								</div>
-							</div>
-						</div>
-						<div class="col-sm-6 col-lg-3">
-							<div class="sAbout__pill" style="background-color: #ACB9C0; color: #3F3F3F">
-								<div class="sAbout__num">48
-								</div>
-								<div class="sAbout__p-txt">подготовленных специалистов
-								</div>
-							</div>
-						</div>
-					</div>
+					<h1>Сотрудничество</h1>
 				</div>
-			</section>
-			<!-- end sAbout-->
-			<!-- start sHello-->
-			<section class="sHello section" id="sHello">
+			</div>
+			<!-- start sColaboration-->
+			<div class="sColaboration section" id="sColaboration">
 				<div class="container">
-					<div class="section-title">
-						<h2>Приветствуем Вас на сайте компании «Китченмания»!</h2>
-						<p>Наша история началась в 2009 году. С тех пор мы постоянно развиваемся и сейчас рады представить вам новейший формат салона бытовой техники, где объединились все лучшие элементы классического офф-лайн шоу-рума и современного интернет-магазина:</p>
-						<ul>
-							<li>
-								Можно приехать к нам в гости и познакомиться лично, а лучшие профессионалы своего дела – наши консультанты, с удовольствием проведут экскурсию и
-								<br/>посоветуют, что лучше всего подходит под ваши ожидания и требования;
-							</li>
-							<li>Можно потрогать и оценить выбранный товар «в живую»;</li>
-							<li>
-								Можно увидеть, как действительно работает техника в специально оборудованных для этого зонах: кухни и постирочная комната полностью укомплектованы
-								<br/>оборудованием, подключены и к электричеству, и к водоснабжению;
-							</li>
-							<li>
-								Можно не торопиться с выбором на месте, сделать заказ в онлайн-версии нашего шоу-рума, то есть на этом сайте, так как цены у нас одинаковые на обоих
-								<br/>площадках.
-							</li>
-						</ul>
-					</div>
-				</div>
-			</section>
-			<!-- end sHello-->
-			<!-- start sIcons-->
-			<section class="sIcons section" id="sIcons">
-				<div class="container">
-					<div class="section-title">
-						<h2>Выбирая нас, вы можете быть уверены, что мы всегда ориентировались на пожелания наших клиентов и собрали у себя всё самое важное для вас:</h2>
-					</div>
-					<div class="sIcons__row-wrap">
-						<div class="sIcons__row row">
-							<div class="sIcons__col col-6 col-sm-4 col-lg-3">
-								<div class="sIcons__item text-center">
-									<div class="sIcons__img"><img loading="lazy" src="img/svg/sIcons-1.svg" alt=""/>
-									</div>
-									<div class="sIcons__txt">Адекватные <br> цены
-									</div>
+					<div class="sColaboration__row row">
+						<div class="col-md-6">
+							<div class="sColaboration__item"><a class="sColaboration__img" href="#"><img loading="lazy" src="img/@2x/sColaboration-1.jpg" alt=""/></a><a class="sColaboration__title" href="#">Дизайнеры</a>
+								<div class="sColaboration__txt">Вы дизайнер и вашим клиентам необходима бытовая техника "под ключ"? Мы всегда рады помочь! Продумаем и подберём оптимальные варианты наборов как крупной, так и мелкой бытовой техники, поможем с установкой и настройкой, предложим специальные условия на покупку. А в нашем шоу-руме мы с удовольствием можем продемонстрировать, как выглядит и рабоает техника в реальных условиях: в нашем салоне представлены полностью оборудованные и действующие образцы кухонь!
 								</div>
 							</div>
-							<div class="sIcons__col col-6 col-sm-4 col-lg-3">
-								<div class="sIcons__item text-center">
-									<div class="sIcons__img"><img loading="lazy" src="img/svg/sIcons-2.svg" alt=""/>
-									</div>
-									<div class="sIcons__txt">Бесплатная <br> доставка
-									</div>
+						</div>
+						<div class="col-md-6">
+							<div class="sColaboration__item"><a class="sColaboration__img" href="#"><img loading="lazy" src="img/@2x/sColaboration-2.jpg" alt=""/></a><a class="sColaboration__title" href="#">Дропшипиинг</a>
+								<div class="sColaboration__txt">Дропшиппинг - это такая схема продаж, когда продавец не хранит у себя товары, но является посредником между клиентом и поставщиком. Наша компания готова предложить и такой вариант партнёрства. Эта система подходит для вас, если у вас есть свой кухонный салон, розничный или интернет-магазин. Нет необходимости заключать договоры с большим количеством поставщиков или производителей, транспортными и логистическими компаниями, достачно подписать один - с нами. Вы принимаете заказа от клента у Вас на сайте / офлайн-точке, присылаете нам заявку через Личчный кабинет, а мы берём всё остальное на себя: доставим заказ клиенту, примем оплату, выдадим чек и обязательные документы. Вам остаётся только получить прибыль - маржа полностью Ваша. Оставляйте заявку на подключение к данной схеме и мы расскажем Вам более подробно о дропшиппинге, всех нюансах работы и поможем с первыми шагами.
 								</div>
 							</div>
-							<div class="sIcons__col col-6 col-sm-4 col-lg-3">
-								<div class="sIcons__item text-center">
-									<div class="sIcons__img"><img loading="lazy" src="img/svg/sIcons-3.svg" alt=""/>
-									</div>
-									<div class="sIcons__txt">Бесплатная <br> установка
-									</div>
+						</div>
+						<div class="col-md-6">
+							<div class="sColaboration__item"><a class="sColaboration__img" href="#"><img loading="lazy" src="img/@2x/sColaboration-3.jpg" alt=""/></a><a class="sColaboration__title" href="#">Оптовые покупатели</a>
+								<div class="sColaboration__txt">Для оптовых покупателей мы готовы предложить индивидуальные условия сотрудничества. Всегда актуальныая информация о наличии товара, его стоимости и условиях поставки доступна у наших менеджеров.
 								</div>
 							</div>
-							<div class="sIcons__col col-6 col-sm-4 col-lg-3">
-								<div class="sIcons__item text-center">
-									<div class="sIcons__img"><img loading="lazy" src="img/svg/sIcons-4.svg" alt=""/>
-									</div>
-									<div class="sIcons__txt">Простой возврат <br> и обмен
-									</div>
-								</div>
-							</div>
-							<div class="sIcons__col col-6 col-sm-4 col-lg-3">
-								<div class="sIcons__item text-center">
-									<div class="sIcons__img"><img loading="lazy" src="img/svg/sIcons-5.svg" alt=""/>
-									</div>
-									<div class="sIcons__txt">Фирменная <br> гарантия
-									</div>
-								</div>
-							</div>
-							<div class="sIcons__col col-6 col-sm-4 col-lg-3">
-								<div class="sIcons__item text-center">
-									<div class="sIcons__img"><img loading="lazy" src="img/svg/sIcons-6.svg" alt=""/>
-									</div>
-									<div class="sIcons__txt">Много акций <br> и скидок
-									</div>
-								</div>
-							</div>
-							<div class="sIcons__col col-6 col-sm-4 col-lg-3">
-								<div class="sIcons__item text-center">
-									<div class="sIcons__img"><img loading="lazy" src="img/svg/sIcons-7.svg" alt=""/>
-									</div>
-									<div class="sIcons__txt">Всегда живая <br> обратная связь
-									</div>
+						</div>
+						<div class="col-md-6">
+							<div class="sColaboration__item"><a class="sColaboration__img" href="#"><img loading="lazy" src="img/@2x/sColaboration-4.jpg" alt=""/></a><a class="sColaboration__title" href="#">Кухонные салоны</a>
+								<div class="sColaboration__txt">Для кухонных салонов мы разработали специальные условия по сотрудничеству: огромный ассортимент и официальная техника от крупнейших поставщиков, программа полного сервиса и отличные цены, всё то, что необходимо для наполнения кухни и дома клиента бытовой техникой!
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="sIcons__gray">
-						Если у вас остались какие-либо вопросы, пожелания, предложения или замечания, касающиеся работы нашего Шоу-рума ил Интернет-магазина – просто напишите нам на почту
-						<a href="mailto:shop@kitchenmania.ru">shop@kitchenmania.ru</a>
-						и мы обязательно отреагируем
-					</div>
 				</div>
-			</section>
-			<!-- end sIcons-->
+			</div>
+			<!-- end sColaboration-->
 			<!-- start sForm-->
-			<section class="sForm section" id="sForm">
+			<section class="sForm sForm--alt section" id="sForm">
 				<div class="container">
-					<div class="sForm__box">
+					<div class="sForm__box sForm__box--alt">
 						<div class="sForm__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
 						</div>
 						<div class="section-title">
-							<h2>Хотите связаться с нами и что-то предложить?</h2>
-							<p>Заполните форму обратной связи, напишите ваше мнение. Мы ответим вам на указанную почту</p>
+							<h2>Хотите сотрудничать с нами?</h2>
+							<p>Заполните форму обратной связи, мы перезвоним вам и поговорим о сотрудничестве</p>
 						</div>
 						<div class="form-wrap">
 							<form>
-								<div class="form-wrap__row row">
-									<div class="form-wrap__left-col col-lg-auto">
+								<div class="form-wrap__row form-wrap__row--alt row">
+									<div class="form-wrap__inp-col col-md-6 col-lg-auto">
 										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше имя"/>
 										</div>
 										<!-- +e.input-wrap-->
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="email" type="email" placeholder="Ваша электронная почта"/>
+									</div>
+									<div class="form-wrap__inp-col col-md-6 col-lg-auto">
+										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш телефон"/>
 										</div>
 										<!-- +e.input-wrap-->
 									</div>
 									<div class="col-lg">
-										<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" name="textarea" placeholder="Ваш комментарий"></textarea>
-										</div>
-										<!-- +e.input-wrap-->
-									</div>
-									<div class="col-12 m-0"></div>
-									<div class="form-wrap__left-col col-lg-auto">
 										<button class="form-wrap__btn" type="submit">написать нам
 										</button>
 									</div>
-									<div class="col-lg">
-										<div class="form-wrap__policy">
-											<div class="form-wrap__p-txt">
-												Мы безопасно храним данные и никому их не передаём, вот
-												<a href="#">условия.</a>
-											</div>
-										</div>
+								</div>
+								<div class="form-wrap__policy form-wrap__policy--mh0">
+									<div class="form-wrap__p-txt">
+										Мы безопасно храним данные и никому их не передаём, вот
+										<a href="#">условия.</a>
 									</div>
 								</div>
 							</form>
@@ -386,7 +262,6 @@
 					</div>
 				</div>
 			</section>
-			<!-- end sForm-->
 			<footer class="footer">
 				<div class="footer__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
 				</div>
