--- a/public/03-contacts.html
+++ b/public/03-contacts.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body data-bg="01.png">
+	<body data-bg="03.png">
 		<div class="main-wrapper">
 			<div class="menu-mobile menu-mobile--js d-xl-none">
 				<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
@@ -180,213 +180,44 @@
 				</div>
 			</header>
 			<!-- end header-->
-			<!-- start sAbout-->
-			<section class="sAbout section" id="sAbout">
-				<div class="sAbout__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
-				</div>
-				<div class="container">
-					<nav>
-						<ol class="breadcrumb">
-							<li class="breadcrumb-item"><a href="/"><span>Главная</span></a></li>
-							<li class="breadcrumb-item active"><a href="#"><span>О магазине</span></a></li>
-						</ol>
-					</nav>
-					<div class="sAbout__row row">
-						<div class="col-md-4 col-lg-5">
-							<div class="section-title">
-								<h1>О магазине</h1>
-							</div>
-						</div>
-						<div class="col-md-8 col-lg-7">
-							<div class="sAbout__descr">
-								<p>Наша история началась в 2009 году. С тех пор мы постоянно развиваемся и сейчас рады представить вам новейший формат салона бытовой техники, где объединились все лучшие элементы классического офф-лайн шоу-рума и современного интернет-магазина. Наша история началась в 2009 году.</p>
-							</div><a class="sAbout__message-btn" href="#">написать нам</a>
+			<!-- start sContacts-->
+			<section class="sContacts" id="sContacts">
+				<div class="sContacts__row row">
+					<div class="sContacts__map-col col-lg-6">
+						<div class="sContacts__map"><script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A00d48b3f3386e58651320b3706a9840cff2ea7d16eaa7d7c09d98fdfb6e71942&amp;width=716&amp;height=720&amp;lang=ru_RU&amp;scroll=false"></script>
 						</div>
 					</div>
-					<div class="sAbout__img"><img loading="lazy" src="img/@2x/sAbout-baner.png" alt=""/>
-					</div>
-					<div class="sAbout__pills-row row">
-						<div class="col-sm-6 col-lg-3">
-							<div class="sAbout__pill" style="background-color: #DFD1CC; color: #3F3F3F">
-								<div class="sAbout__num">2009
-								</div>
-								<div class="sAbout__p-txt">год основания компании
-								</div>
-							</div>
+					<div class="sContacts__content-col col-lg">
+						<div class="page-head">
+							<nav>
+								<ol class="breadcrumb">
+									<li class="breadcrumb-item"><a href="/"><span>Главная</span></a></li>
+									<li class="breadcrumb-item active"><a href="#"><span>Контакты</span></a></li>
+								</ol>
+							</nav>
+							<h1>Контакты</h1>
 						</div>
-						<div class="col-sm-6 col-lg-3">
-							<div class="sAbout__pill" style="background-color: #717171; color: #ffffff">
-								<div class="sAbout__num">1 200
-								</div>
-								<div class="sAbout__p-txt">наименований продукции
-								</div>
-							</div>
+						<div class="sContacts__sub-title">Адрес:
 						</div>
-						<div class="col-sm-6 col-lg-3">
-							<div class="sAbout__pill" style="background-color: #EEEEEE; color: #3F3F3F">
-								<div class="sAbout__num">34
-								</div>
-								<div class="sAbout__p-txt">крупных бренда
-								</div>
-							</div>
+						<div class="sContacts__address">г. Москва, ул.Складочная д.1, стр. 9
 						</div>
-						<div class="col-sm-6 col-lg-3">
-							<div class="sAbout__pill" style="background-color: #ACB9C0; color: #3F3F3F">
-								<div class="sAbout__num">48
-								</div>
-								<div class="sAbout__p-txt">подготовленных специалистов
-								</div>
-							</div>
+						<div class="sContacts__a-links"><a class="sContacts__a-link" href="#">Схема проезда от станции метро Дмитровская</a><a class="sContacts__a-link" href="#">Схема проезда от станции метро Савеловская</a>
 						</div>
+						<div class="sContacts__sub-title">Телефоны:
+						</div>
+						<div class="sContacts__tells"><a class="sContacts__tell" href="tel:+78007758272">Россия +7 (800) 775-82-72</a><a class="sContacts__tell" href="tel:+74957758272">Москва +7 (495) 775-82-72</a><a class="sContacts__tell" href="tel:+74957758272">Для оптовых покупателей +7 (495) 775-82-72</a>
+						</div>
+						<div class="sContacts__sub-title">Электронная почта:
+						</div><a class="sContacts__mail" href="mailto:shop@kitchenmania.ru">shop@kitchenmania.ru</a>
+						<div class="sContacts__sub-title">Юридические реквизиты:
+						</div>
+						<div class="sContacts__props">ООО «ТД АРХЕОН»<br/>ИНН 7751175159<br/>КПП 775101001<br/>ОГРН 1207700005897<br/>108850 г. Москва, поселение Внуковское, ул. Авиаконструктора Петлякова, д. 9,
+							<br/>пом.3, офис 11
+						</div><a class="sContacts__get-props" href="#"><span class="sContacts__g-icon"><img loading="lazy" src="img/svg/word.svg" alt=""/></span><span>Скачать реквизиты</span></a>
 					</div>
 				</div>
 			</section>
-			<!-- end sAbout-->
-			<!-- start sHello-->
-			<section class="sHello section" id="sHello">
-				<div class="container">
-					<div class="section-title">
-						<h2>Приветствуем Вас на сайте компании «Китченмания»!</h2>
-						<p>Наша история началась в 2009 году. С тех пор мы постоянно развиваемся и сейчас рады представить вам новейший формат салона бытовой техники, где объединились все лучшие элементы классического офф-лайн шоу-рума и современного интернет-магазина:</p>
-						<ul>
-							<li>
-								Можно приехать к нам в гости и познакомиться лично, а лучшие профессионалы своего дела – наши консультанты, с удовольствием проведут экскурсию и
-								<br/>посоветуют, что лучше всего подходит под ваши ожидания и требования;
-							</li>
-							<li>Можно потрогать и оценить выбранный товар «в живую»;</li>
-							<li>
-								Можно увидеть, как действительно работает техника в специально оборудованных для этого зонах: кухни и постирочная комната полностью укомплектованы
-								<br/>оборудованием, подключены и к электричеству, и к водоснабжению;
-							</li>
-							<li>
-								Можно не торопиться с выбором на месте, сделать заказ в онлайн-версии нашего шоу-рума, то есть на этом сайте, так как цены у нас одинаковые на обоих
-								<br/>площадках.
-							</li>
-						</ul>
-					</div>
-				</div>
-			</section>
-			<!-- end sHello-->
-			<!-- start sIcons-->
-			<section class="sIcons section" id="sIcons">
-				<div class="container">
-					<div class="section-title">
-						<h2>Выбирая нас, вы можете быть уверены, что мы всегда ориентировались на пожелания наших клиентов и собрали у себя всё самое важное для вас:</h2>
-					</div>
-					<div class="sIcons__row-wrap">
-						<div class="sIcons__row row">
-							<div class="sIcons__col col-6 col-sm-4 col-lg-3">
-								<div class="sIcons__item text-center">
-									<div class="sIcons__img"><img loading="lazy" src="img/svg/sIcons-1.svg" alt=""/>
-									</div>
-									<div class="sIcons__txt">Адекватные <br> цены
-									</div>
-								</div>
-							</div>
-							<div class="sIcons__col col-6 col-sm-4 col-lg-3">
-								<div class="sIcons__item text-center">
-									<div class="sIcons__img"><img loading="lazy" src="img/svg/sIcons-2.svg" alt=""/>
-									</div>
-									<div class="sIcons__txt">Бесплатная <br> доставка
-									</div>
-								</div>
-							</div>
-							<div class="sIcons__col col-6 col-sm-4 col-lg-3">
-								<div class="sIcons__item text-center">
-									<div class="sIcons__img"><img loading="lazy" src="img/svg/sIcons-3.svg" alt=""/>
-									</div>
-									<div class="sIcons__txt">Бесплатная <br> установка
-									</div>
-								</div>
-							</div>
-							<div class="sIcons__col col-6 col-sm-4 col-lg-3">
-								<div class="sIcons__item text-center">
-									<div class="sIcons__img"><img loading="lazy" src="img/svg/sIcons-4.svg" alt=""/>
-									</div>
-									<div class="sIcons__txt">Простой возврат <br> и обмен
-									</div>
-								</div>
-							</div>
-							<div class="sIcons__col col-6 col-sm-4 col-lg-3">
-								<div class="sIcons__item text-center">
-									<div class="sIcons__img"><img loading="lazy" src="img/svg/sIcons-5.svg" alt=""/>
-									</div>
-									<div class="sIcons__txt">Фирменная <br> гарантия
-									</div>
-								</div>
-							</div>
-							<div class="sIcons__col col-6 col-sm-4 col-lg-3">
-								<div class="sIcons__item text-center">
-									<div class="sIcons__img"><img loading="lazy" src="img/svg/sIcons-6.svg" alt=""/>
-									</div>
-									<div class="sIcons__txt">Много акций <br> и скидок
-									</div>
-								</div>
-							</div>
-							<div class="sIcons__col col-6 col-sm-4 col-lg-3">
-								<div class="sIcons__item text-center">
-									<div class="sIcons__img"><img loading="lazy" src="img/svg/sIcons-7.svg" alt=""/>
-									</div>
-									<div class="sIcons__txt">Всегда живая <br> обратная связь
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="sIcons__gray">
-						Если у вас остались какие-либо вопросы, пожелания, предложения или замечания, касающиеся работы нашего Шоу-рума ил Интернет-магазина – просто напишите нам на почту
-						<a href="mailto:shop@kitchenmania.ru">shop@kitchenmania.ru</a>
-						и мы обязательно отреагируем
-					</div>
-				</div>
-			</section>
-			<!-- end sIcons-->
-			<!-- start sForm-->
-			<section class="sForm section" id="sForm">
-				<div class="container">
-					<div class="sForm__box">
-						<div class="sForm__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
-						</div>
-						<div class="section-title">
-							<h2>Хотите связаться с нами и что-то предложить?</h2>
-							<p>Заполните форму обратной связи, напишите ваше мнение. Мы ответим вам на указанную почту</p>
-						</div>
-						<div class="form-wrap">
-							<form>
-								<div class="form-wrap__row row">
-									<div class="form-wrap__left-col col-lg-auto">
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше имя"/>
-										</div>
-										<!-- +e.input-wrap-->
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="email" type="email" placeholder="Ваша электронная почта"/>
-										</div>
-										<!-- +e.input-wrap-->
-									</div>
-									<div class="col-lg">
-										<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" name="textarea" placeholder="Ваш комментарий"></textarea>
-										</div>
-										<!-- +e.input-wrap-->
-									</div>
-									<div class="col-12 m-0"></div>
-									<div class="form-wrap__left-col col-lg-auto">
-										<button class="form-wrap__btn" type="submit">написать нам
-										</button>
-									</div>
-									<div class="col-lg">
-										<div class="form-wrap__policy">
-											<div class="form-wrap__p-txt">
-												Мы безопасно храним данные и никому их не передаём, вот
-												<a href="#">условия.</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- end sForm-->
+			<!-- end sContacts-->
 			<footer class="footer">
 				<div class="footer__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
 				</div>
