--- a/public/04-delivery-1.html
+++ b/public/04-delivery-1.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body data-bg="03.png">
+	<body data-bg="04-1.png">
 		<div class="main-wrapper">
 			<div class="menu-mobile menu-mobile--js d-xl-none">
 				<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
@@ -180,44 +180,155 @@
 				</div>
 			</header>
 			<!-- end header-->
-			<!-- start sContacts-->
-			<section class="sContacts" id="sContacts">
-				<div class="sContacts__row row">
-					<div class="sContacts__map-col col-lg-6">
-						<div class="sContacts__map"><script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A00d48b3f3386e58651320b3706a9840cff2ea7d16eaa7d7c09d98fdfb6e71942&amp;width=716&amp;height=720&amp;lang=ru_RU&amp;scroll=false"></script>
+			<div class="page-head">
+				<div class="container">
+					<nav>
+						<ol class="breadcrumb">
+							<li class="breadcrumb-item"><a href="/"><span>Главная</span></a></li>
+							<li class="breadcrumb-item active"><a href="#"><span>Доставка и оплата</span></a></li>
+						</ol>
+					</nav>
+					<h1>Доставка и оплата</h1>
+				</div>
+			</div>
+			<!-- start sDelivery-->
+			<div class="sDelivery section" id="sDelivery">
+				<div class="container">
+					<div class="tabs">
+						<div class="sDelivery__caption-row tabs__caption row">
+							<div class="col-auto">
+								<div class="sDelivery__tabs-btn tabs__btn active">Способы доставки
+								</div>
+							</div>
+							<div class="col-auto">
+								<div class="sDelivery__tabs-btn tabs__btn">Способы оплаты
+								</div>
+							</div>
 						</div>
-					</div>
-					<div class="sContacts__content-col col-lg">
-						<div class="page-head">
-							<nav>
-								<ol class="breadcrumb">
-									<li class="breadcrumb-item"><a href="/"><span>Главная</span></a></li>
-									<li class="breadcrumb-item active"><a href="#"><span>Контакты</span></a></li>
-								</ol>
-							</nav>
-							<h1>Контакты</h1>
+						<div class="tabs__wrap">
+							<div class="tabs__content active">
+								<div class="delivery">
+									<div class="delivery__top-txt">
+										Вы можете приобрести все товары из нашего ассортимента с доставкой во все города России. По Москве и Московской области мы доставляем Ваши заказы ежедневно в удобное для Вас время. Также у нас можно забрать заказы самостояельно. Более подробно ознакомится с условиями можно в разделе
+										<a href="#">самовывоз.</a>
+									</div>
+									<div class="delivery__img-row row align-items-center">
+										<div class="col-md">
+											<div class="delivery__i-txt">
+												<h2>Условия доставки</h2>
+												<p>Доставка осуществляется на фактический адрес (улица, дом, квартира или офис), в офисные здания, торговые центры и предприятия доставка осуществляется до первого "препятствия" (кпп, ресепшн, проходная и т.п.). Мы не доставляем заказы в парки, лесные массивы, на пляжи или иные места, не имеющие определенного адреса. Время ожидания курьером не более 15 мин. При доставке на территорию с оплачиваемым въездом, вы оплачиваете стоимость въезда, иначе доставка только до места платного въезда. В день доставки, по указанному в заказе телефону, с покупателем связывается курьер и уточняет адрес и интервал времени доставки.</p>
+												<p>В указанный период покупатель должен находиться по адресу доставки, а контактные телефоны должны быть доступны. Если курьер не дозвонился до Вас, доставка осуществлена не будет, но может быть перенесена на ближайшую дату по Вашему желанию. Внимание! Крупногабаритный товар, который невозможно занести в помещения по причине того, что дверной проем меньше по высоте и/или ширине габаритных размеров товара, доставляется до порога. В случае отказа от доставки такого товара стоимость услуг доставки оплачивается клиентом в полном размере.</p>
+											</div>
+										</div>
+										<div class="col-md-4">
+											<div class="delivery__img"><img loading="lazy" src="img/@2x/delivery-img.jpg" alt=""/>
+											</div>
+										</div>
+									</div>
+									<div class="delivery__items-row row">
+										<div class="col-md-6">
+											<div class="delivery__item">
+												<h4>Доставка по Москве</h4>
+												<p>Практически на все товары в нашем магазине действует бесплатная доставка. В ином случае - стоимость доставки указана в карточке товара</p>
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="delivery__item">
+												<h4>Доставка по Московской области</h4>
+												<p>Стоимость доставки рассчитывается исходя из стоимости доставки по Москве +30 рублей за каждый километр от МКАД до пункта доставки.</p>
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="delivery__item">
+												<h4>Доставка по Российской Федерации</h4>
+												<p>Стоимость доставки рассчитывается исходя из стоимости доставки по Москве +30 рублей за каждый километр от МКАД до пункта доставки.</p>
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="delivery__item">
+												<h4>Доставка при помощи транспортных компаний-партнёров</h4>
+												<p>Деловые линии, ПЭК, СДЭК</p>
+											</div>
+										</div>
+										<div class="col-12">
+											<div class="delivery__big">
+												<div class="delivery__big-row row">
+													<div class="delivery__map-col col-lg-auto"><script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A00d48b3f3386e58651320b3706a9840cff2ea7d16eaa7d7c09d98fdfb6e71942&amp;width=716&amp;height=720&amp;lang=ru_RU&amp;scroll=false"></script>
+													</div>
+													<div class="delivery__b-txt-col col-lg">
+														<h4 class="delivery__b-title">Самовывоз
+														</h4>
+														<div class="delivery__b-descr">
+															<p>Вы можете самостоятельно получить товар у нас в шоу-руме. Просто оформите заказа на сайте или по телефону и выберите услугу "Самовыоз". Срок хранения заказа на пункте выдачи - 2 дня, после этого срока заказ расформировывается и возвращается на склад.</p>
+														</div>
+														<div class="delivery__b-title-sm">Адрес:
+														</div>
+														<div class="delivery__b-address">г. Москва, ул.Складочная д.1, стр. 9
+														</div>
+														<div class="a-links"><a class="a-links__link" href="#">Схема проезда от станции метро Дмитровская</a><a class="a-links__link" href="#">Схема проезда от станции метро Савеловская</a>
+														</div>
+														<div class="delivery__b-title-sm">Стоимость:
+														</div>
+														<div class="delivery__b-price">Бесплатно
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="delivery__foot">
+										<h2>Доставка транспортной компанией</h2>
+										<p>Мы продолжаем расширять границы доставки заказов. Это стало возможным благодаря сотрудничеству с транспортной компанией СДЭК, которая с 2000 года организовывает перевозки грузов, деловой корреспонденции, товаров разных категорий, габаритов, ценности по Москве, России и миру. У компании более 420 собственных офисов и около 400 партнерских, порядка 5 000 машин для доставки документов и грузов</p>
+									</div>
+									<div class="delivery__form-cont">
+										<!-- start sForm-->
+										<section class="sForm sForm--alt section" id="sForm">
+											<div class="container">
+												<div class="sForm__box sForm__box--alt">
+													<div class="sForm__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
+													</div>
+													<div class="section-title">
+														<h2>Есть вопросы по поводу доставки?</h2>
+														<p>Заполните форму обратной связи, мы перезвоним вам и ответим на все ваши вопросы</p>
+													</div>
+													<div class="form-wrap">
+														<form>
+															<div class="form-wrap__row form-wrap__row--alt row">
+																<div class="form-wrap__inp-col col-md-6 col-lg-auto">
+																	<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше имя"/>
+																	</div>
+																	<!-- +e.input-wrap-->
+																</div>
+																<div class="form-wrap__inp-col col-md-6 col-lg-auto">
+																	<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш телефон"/>
+																	</div>
+																	<!-- +e.input-wrap-->
+																</div>
+																<div class="col-lg">
+																	<button class="form-wrap__btn" type="submit">написать нам
+																	</button>
+																</div>
+															</div>
+															<div class="form-wrap__policy form-wrap__policy--mh0">
+																<div class="form-wrap__p-txt">
+																	Мы безопасно храним данные и никому их не передаём, вот
+																	<a href="#">условия.</a>
+																</div>
+															</div>
+														</form>
+													</div>
+												</div>
+											</div>
+										</section>
+									</div>
+								</div>
+							</div>
+							<div class="tabs__content"></div>
 						</div>
-						<div class="sContacts__sub-title">Адрес:
-						</div>
-						<div class="sContacts__address">г. Москва, ул.Складочная д.1, стр. 9
-						</div>
-						<div class="a-links"><a class="a-links__link" href="#">Схема проезда от станции метро Дмитровская</a><a class="a-links__link" href="#">Схема проезда от станции метро Савеловская</a>
-						</div>
-						<div class="sContacts__sub-title">Телефоны:
-						</div>
-						<div class="sContacts__tells"><a class="sContacts__tell" href="tel:+78007758272">Россия +7 (800) 775-82-72</a><a class="sContacts__tell" href="tel:+74957758272">Москва +7 (495) 775-82-72</a><a class="sContacts__tell" href="tel:+74957758272">Для оптовых покупателей +7 (495) 775-82-72</a>
-						</div>
-						<div class="sContacts__sub-title">Электронная почта:
-						</div><a class="sContacts__mail" href="mailto:shop@kitchenmania.ru">shop@kitchenmania.ru</a>
-						<div class="sContacts__sub-title">Юридические реквизиты:
-						</div>
-						<div class="sContacts__props">ООО «ТД АРХЕОН»<br/>ИНН 7751175159<br/>КПП 775101001<br/>ОГРН 1207700005897<br/>108850 г. Москва, поселение Внуковское, ул. Авиаконструктора Петлякова, д. 9,
-							<br/>пом.3, офис 11
-						</div><a class="sContacts__get-props" href="#"><span class="sContacts__g-icon"><img loading="lazy" src="img/svg/word.svg" alt=""/></span><span>Скачать реквизиты</span></a>
 					</div>
 				</div>
-			</section>
-			<!-- end sContacts-->
+			</div>
+			<!-- end sDelivery-->
 			<footer class="footer">
 				<div class="footer__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
 				</div>
