--- a/public/04-delivery-1.html
+++ b/public/04-delivery-1.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body data-bg="04-1.png">
+	<body data-bg="04-2.png">
 		<div class="main-wrapper">
 			<div class="menu-mobile menu-mobile--js d-xl-none">
 				<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
@@ -197,30 +197,30 @@
 					<div class="tabs">
 						<div class="sDelivery__caption-row tabs__caption row">
 							<div class="col-auto">
-								<div class="sDelivery__tabs-btn tabs__btn active">Способы доставки
+								<div class="sDelivery__tabs-btn tabs__btn">Способы доставки
 								</div>
 							</div>
 							<div class="col-auto">
-								<div class="sDelivery__tabs-btn tabs__btn">Способы оплаты
+								<div class="sDelivery__tabs-btn tabs__btn active">Способы оплаты
 								</div>
 							</div>
 						</div>
 						<div class="tabs__wrap">
-							<div class="tabs__content active">
+							<div class="tabs__content">
 								<div class="delivery">
 									<div class="delivery__top-txt">
 										Вы можете приобрести все товары из нашего ассортимента с доставкой во все города России. По Москве и Московской области мы доставляем Ваши заказы ежедневно в удобное для Вас время. Также у нас можно забрать заказы самостояельно. Более подробно ознакомится с условиями можно в разделе
 										<a href="#">самовывоз.</a>
 									</div>
-									<div class="delivery__img-row row align-items-center">
-										<div class="col-md">
+									<div class="delivery__img-row row align-items-xl-center">
+										<div class="col-lg">
 											<div class="delivery__i-txt">
 												<h2>Условия доставки</h2>
 												<p>Доставка осуществляется на фактический адрес (улица, дом, квартира или офис), в офисные здания, торговые центры и предприятия доставка осуществляется до первого "препятствия" (кпп, ресепшн, проходная и т.п.). Мы не доставляем заказы в парки, лесные массивы, на пляжи или иные места, не имеющие определенного адреса. Время ожидания курьером не более 15 мин. При доставке на территорию с оплачиваемым въездом, вы оплачиваете стоимость въезда, иначе доставка только до места платного въезда. В день доставки, по указанному в заказе телефону, с покупателем связывается курьер и уточняет адрес и интервал времени доставки.</p>
 												<p>В указанный период покупатель должен находиться по адресу доставки, а контактные телефоны должны быть доступны. Если курьер не дозвонился до Вас, доставка осуществлена не будет, но может быть перенесена на ближайшую дату по Вашему желанию. Внимание! Крупногабаритный товар, который невозможно занести в помещения по причине того, что дверной проем меньше по высоте и/или ширине габаритных размеров товара, доставляется до порога. В случае отказа от доставки такого товара стоимость услуг доставки оплачивается клиентом в полном размере.</p>
 											</div>
 										</div>
-										<div class="col-md-4">
+										<div class="col-lg-5 col-xl-4">
 											<div class="delivery__img"><img loading="lazy" src="img/@2x/delivery-img.jpg" alt=""/>
 											</div>
 										</div>
@@ -323,7 +323,178 @@
 									</div>
 								</div>
 							</div>
-							<div class="tabs__content"></div>
+							<div class="tabs__content active">
+								<div class="payment">
+									<div class="payment__row row">
+										<div class="col-md">
+											<div class="payment__dd-items payment-dd-items-js">
+												<div class="payment__dd-item active">
+													<div class="payment__head dd-head-js">
+														<div class="payment__h-row row align-items-center">
+															<div class="col-auto">
+																<div class="payment__h-icon"><img class="img-svg-js" loading="lazy" src="img/svg/payment-item-1.svg" alt=""/>
+																</div>
+															</div>
+															<div class="col">
+																<div class="payment__title">Оплата картой
+																</div>
+															</div>
+															<div class="col-auto">
+																<div class="payment__chevron">
+																	<svg class="icon icon-chevron-down ">
+																		<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+																	</svg>
+																</div>
+															</div>
+														</div>
+													</div>
+													<div class="payment__content dd-content-js active">
+														<p>Банковская карта VISA, MasterCard, МИР. Возможно оплатить заказ онлайн, при получении заказа при доставке или в шоу-руме.</p>
+														<p>Для оплаты (ввода реквизитов Вашей карты) Вы будете перенаправлены на платежный шлюз ПАО СБЕРБАНК. Соединение с платежным шлюзом и передача информации осуществляется в защищенном режиме с использованием протокола шифрования SSL. В случае если Ваш банк поддерживает технологию безопасного проведения интернет-платежей Verified By Visa или MasterCard SecureCode для проведения платежа также может потребоваться ввод специального пароля.</p>
+														<p>Настоящий сайт поддерживает 256-битное шифрование. Конфиденциальность сообщаемой персональной информации обеспечивается ПАО СБЕРБАНК. Введенная информация не будет предоставлена третьим лицам за исключением случаев, предусмотренных законодательством РФ. Проведение платежей по банковским картам осуществляется в строгом соответствии с требованиями платежных систем МИР, Visa Int. и MasterCard Europe Sprl. Возврат переведенных средств, производится на Ваш банковский счет в течение 5—30 рабочих дней (срок зависит от Банка, который выдал Вашу банковскую карту).</p>
+													</div>
+												</div>
+												<div class="payment__dd-item">
+													<div class="payment__head dd-head-js">
+														<div class="payment__h-row row align-items-center">
+															<div class="col-auto">
+																<div class="payment__h-icon"><img class="img-svg-js" loading="lazy" src="img/svg/payment-item-2.svg" alt=""/>
+																</div>
+															</div>
+															<div class="col">
+																<div class="payment__title">Оплата при получении
+																</div>
+															</div>
+															<div class="col-auto">
+																<div class="payment__chevron">
+																	<svg class="icon icon-chevron-down ">
+																		<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+																	</svg>
+																</div>
+															</div>
+														</div>
+													</div>
+													<div class="payment__content dd-content-js">
+														<p>Банковская карта VISA, MasterCard, МИР. Возможно оплатить заказ онлайн, при получении заказа при доставке или в шоу-руме.</p>
+														<p>Для оплаты (ввода реквизитов Вашей карты) Вы будете перенаправлены на платежный шлюз ПАО СБЕРБАНК. Соединение с платежным шлюзом и передача информации осуществляется в защищенном режиме с использованием протокола шифрования SSL. В случае если Ваш банк поддерживает технологию безопасного проведения интернет-платежей Verified By Visa или MasterCard SecureCode для проведения платежа также может потребоваться ввод специального пароля.</p>
+														<p>Настоящий сайт поддерживает 256-битное шифрование. Конфиденциальность сообщаемой персональной информации обеспечивается ПАО СБЕРБАНК. Введенная информация не будет предоставлена третьим лицам за исключением случаев, предусмотренных законодательством РФ. Проведение платежей по банковским картам осуществляется в строгом соответствии с требованиями платежных систем МИР, Visa Int. и MasterCard Europe Sprl. Возврат переведенных средств, производится на Ваш банковский счет в течение 5—30 рабочих дней (срок зависит от Банка, который выдал Вашу банковскую карту).</p>
+													</div>
+												</div>
+												<div class="payment__dd-item">
+													<div class="payment__head dd-head-js">
+														<div class="payment__h-row row align-items-center">
+															<div class="col-auto">
+																<div class="payment__h-icon"><img class="img-svg-js" loading="lazy" src="img/svg/payment-item-3.svg" alt=""/>
+																</div>
+															</div>
+															<div class="col">
+																<div class="payment__title">Безналичный расчет
+																</div>
+															</div>
+															<div class="col-auto">
+																<div class="payment__chevron">
+																	<svg class="icon icon-chevron-down ">
+																		<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+																	</svg>
+																</div>
+															</div>
+														</div>
+													</div>
+													<div class="payment__content dd-content-js">
+														<p>Банковская карта VISA, MasterCard, МИР. Возможно оплатить заказ онлайн, при получении заказа при доставке или в шоу-руме.</p>
+														<p>Для оплаты (ввода реквизитов Вашей карты) Вы будете перенаправлены на платежный шлюз ПАО СБЕРБАНК. Соединение с платежным шлюзом и передача информации осуществляется в защищенном режиме с использованием протокола шифрования SSL. В случае если Ваш банк поддерживает технологию безопасного проведения интернет-платежей Verified By Visa или MasterCard SecureCode для проведения платежа также может потребоваться ввод специального пароля.</p>
+														<p>Настоящий сайт поддерживает 256-битное шифрование. Конфиденциальность сообщаемой персональной информации обеспечивается ПАО СБЕРБАНК. Введенная информация не будет предоставлена третьим лицам за исключением случаев, предусмотренных законодательством РФ. Проведение платежей по банковским картам осуществляется в строгом соответствии с требованиями платежных систем МИР, Visa Int. и MasterCard Europe Sprl. Возврат переведенных средств, производится на Ваш банковский счет в течение 5—30 рабочих дней (срок зависит от Банка, который выдал Вашу банковскую карту).</p>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="payment__slider-col col-md-auto">
+											<div class="swiper-container payment-slider-js">
+												<div class="swiper-wrapper">
+													<div class="swiper-slide">
+														<div class="payment__item">
+															<div class="payment__bg"><img loading="lazy" src="img/@2x/payment-slider-1.jpg" alt=""/>
+															</div>
+															<div class="payment__s-content">
+																<div class="payment__s-title">Покупай в кредит!
+																</div>
+																<div class="payment__s-descr">В нашем магазине можно приобрести товары в рассрочку или кредит без первоначального взноса и переплат через Почта Банк.
+																</div><a class="payment__s-btn" href="#">узнать подробнее</a>
+															</div>
+														</div>
+													</div>
+													<div class="swiper-slide">
+														<div class="payment__item">
+															<div class="payment__bg"><img loading="lazy" src="img/@2x/payment-slider-1.jpg" alt=""/>
+															</div>
+															<div class="payment__s-content">
+																<div class="payment__s-title">Покупай в кредит!
+																</div>
+																<div class="payment__s-descr">В нашем магазине можно приобрести товары в рассрочку или кредит без первоначального взноса и переплат через Почта Банк.
+																</div><a class="payment__s-btn" href="#">узнать подробнее</a>
+															</div>
+														</div>
+													</div>
+													<div class="swiper-slide">
+														<div class="payment__item">
+															<div class="payment__bg"><img loading="lazy" src="img/@2x/payment-slider-1.jpg" alt=""/>
+															</div>
+															<div class="payment__s-content">
+																<div class="payment__s-title">Покупай в кредит!
+																</div>
+																<div class="payment__s-descr">В нашем магазине можно приобрести товары в рассрочку или кредит без первоначального взноса и переплат через Почта Банк.
+																</div><a class="payment__s-btn" href="#">узнать подробнее</a>
+															</div>
+														</div>
+													</div>
+												</div>
+												<div class="swiper-pagination"></div>
+											</div>
+										</div>
+									</div>
+									<div class="payment__form-cont">
+										<!-- start sForm-->
+										<section class="sForm sForm--alt section" id="sForm">
+											<div class="container">
+												<div class="sForm__box sForm__box--alt">
+													<div class="sForm__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
+													</div>
+													<div class="section-title">
+														<h2>Есть вопросы по поводу оплаты?</h2>
+														<p>Заполните форму обратной связи, мы перезвоним вам и ответим на все ваши вопросы</p>
+													</div>
+													<div class="form-wrap">
+														<form>
+															<div class="form-wrap__row form-wrap__row--alt row">
+																<div class="form-wrap__inp-col col-md-6 col-lg-auto">
+																	<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше имя"/>
+																	</div>
+																	<!-- +e.input-wrap-->
+																</div>
+																<div class="form-wrap__inp-col col-md-6 col-lg-auto">
+																	<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш телефон"/>
+																	</div>
+																	<!-- +e.input-wrap-->
+																</div>
+																<div class="col-lg">
+																	<button class="form-wrap__btn" type="submit">написать нам
+																	</button>
+																</div>
+															</div>
+															<div class="form-wrap__policy form-wrap__policy--mh0">
+																<div class="form-wrap__p-txt">
+																	Мы безопасно храним данные и никому их не передаём, вот
+																	<a href="#">условия.</a>
+																</div>
+															</div>
+														</form>
+													</div>
+												</div>
+											</div>
+										</section>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
